2003-05-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (renamed objects): New node.
	(Program and Library Variables): Move maude_DEPENDENCIES closer
	to maude_LDADD.  Define and use `per-target compilation flags' in the
	explanation for maude_CFLAGS et al.  Link to the `renamed objects'
	node.  Illustrate maude_SHORTNAME.

2003-05-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/install-sh: Update copyright notice and license to that of
	X11R6.  This removes an advertising clause reported as Debian bug
	#191717.

2003-05-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in (ACLOCAL): Do not use -I, --acdir is enough.

	* m4/make.m4: Rename the doit target as am__doit,
	and make it phony.
	Reported by Philip S Tellis.

2003-05-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/configure.am (%MAKEFILE-IN%): Propagate automake's exit
	status.
	* tests/makej.test: New file (test Autom4te's cache locking,
	new in CVS Autoconf).
	* tests/Makefile.am (TESTS): Add makej.test.

2003-05-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/General.pm (contents): New function.
	* aclocal.in (greatest_mtime, force_output): New globals.
	(scan_configure, add_file): Update $greatest_mtime.
	(parse_arguments): Parse --force.
	(write_aclocal): Do not overwrite $output_file unless needed.
	* automake.texi (aclocal options): Document --force.
	* tests/aclocal7.test: New file.
	* tests/Makefile.am (TESTS): Add aclocal7.test.

2003-05-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Optional): Document m4_include.
	(Invoking aclocal): Shake a bit to introduce the various uses
	of aclocal and explain that aclocal will use m4_include for
	local files.
	(Extending aclocal): Show how to install installable macros
	in $(datadir)/aclocal, and make it clearer that writing installable
	macros is not the only way to extend aclocal.
	(Local Macros, Future of aclocal): New sections.

2003-04-27  Alexandre Duret-Lutz  <adl@gnu.org>
