@@ -34,18 +34,20 @@
 ## ----------------- ##
 
 .PHONY: install install-exec install-data uninstall
-
-?SUBDIRS?.PHONY: install-recursive install-exec-recursive install-data-recursive uninstall-recursive
-?SUBDIRS?install:%maybe_BUILT_SOURCES% install-recursive
-?SUBDIRS?install-exec: install-exec-recursive
-?SUBDIRS?install-data: install-data-recursive
-?SUBDIRS?uninstall: uninstall-recursive
-
 .PHONY: install-exec-am install-data-am uninstall-am
-?!SUBDIRS?install:%maybe_BUILT_SOURCES% install-am
-?!SUBDIRS?install-exec: install-exec-am
-?!SUBDIRS?install-data: install-data-am
-?!SUBDIRS?uninstall: uninstall-am
+
+if %?SUBDIRS%
+.PHONY: install-recursive install-exec-recursive install-data-recursive uninstall-recursive
+install:%maybe_BUILT_SOURCES% install-recursive
+install-exec: install-exec-recursive
+install-data: install-data-recursive
+uninstall: uninstall-recursive
+else !%?SUBDIRS%
+install:%maybe_BUILT_SOURCES% install-am
+install-exec: install-exec-am
+install-data: install-data-am
+uninstall: uninstall-am
+endif !%?SUBDIRS%
 
 .PHONY: install-am
 install-am: all-am
