@@ -1,4 +1,4 @@
-@set UPDATED 11 May 2003
+@set UPDATED 17 May 2003
 @set UPDATED-MONTH May 2003
 @set EDITION 1.7a
 @set VERSION 1.7a
