@@ -45,6 +45,7 @@ backsl4.test \
 badline.test \
 badprog.test \
 block.test \
+bsource.test \
 canon.test \
 canon2.test \
 canon3.test \
