@@ -1,3 +1,14 @@
+2003-05-17  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/install.am (install, install-exec, install-data, uninstall):
+	Declare conditionally using a if/else/endif block instead of
+	using ?SUBDIRS?-style conditions.  The latter fail when
+	%maybe_BUILT_SOURCES% is replaced by several lines.
+	This fixes a bug introduced on 2003-04-06.
+	* tests/bsource.test: New file.
+	* tests/Makefile.am (TESTS): Add bsource.test.
+	Reported by Bruno Haible.
+
 2003-05-11  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.texi (renamed objects): New node.
